# ml_powered_ai_agent

./: ml-powered-ai-agent.7z
ml-powered-ai-agent/: README.md  env_template.txt  main.py  pyproject.toml  requirements.txt  steps.txt
ml-powered-ai-agent/agents_src/: crew.py  main.py
ml-powered-ai-agent/agents_src/agents/: diabetes_prediction_agent.py
ml-powered-ai-agent/agents_src/tasks/: diabetes_prediction_task.py
ml-powered-ai-agent/agents_src/tools/: diabetes_prediction_tool.py
ml-powered-ai-agent/artifacts/model/: diabetes_model.pkl
ml-powered-ai-agent/config/: settings.py
ml-powered-ai-agent/database/: mongo.py
ml-powered-ai-agent/ml_src/: predict_diabetes.py  train_diabetes_model.py
ml-powered-ai-agent/streamlit_src/: app.py
